fixes overflow

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -56,7 +56,7 @@ html.index main img {
 	line-height: 1.5;
 	border-radius: 4px;
 	border-left: 6px solid rgba(255, 165, 0, 0.8);
-	overflow: scroll;
+	overflow: auto;
 }
 
 div.codebox span:before{
